Fix text padding and overflow image

--- a/front/src/app/pages/page-product/page-product.component.styl
+++ b/front/src/app/pages/page-product/page-product.component.styl
@@ -1,6 +1,7 @@
 bordered()
   border 1px solid rgba(0,0,0,.12)
   border-radius 4px
+  overflow hidden
 
 :host
   display flex
@@ -51,7 +52,7 @@ bordered()
 
 
 .label
-  padding 24px
+  padding 24px 0
 
 .product__properties
   bordered()
